--- a/FraudDetection.ipynb
+++ b/FraudDetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "7afe6728",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 112,
    "id": "30f29ee7",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 113,
    "id": "4f6f3a07",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "604ea404",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 115,
    "id": "e0fe1991",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "id": "d0c487e7",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "41f440c6",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
        "<Axes: xlabel='Class', ylabel='count'>"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 118,
    "id": "1f1ecb31",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
        "Name: Amount, dtype: float64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "8417de2f",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
        "1       2125.870117  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "b59f2109",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "<Axes: xlabel='Class', ylabel='Amount'>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "e05b80db",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 122,
    "id": "caaae5d3",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 123,
    "id": "5c5c6e95",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "9be12bdc",
    "metadata": {},
    "outputs": [],
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "fe93f58c",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "598a6437",
    "metadata": {},
    "outputs": [
@@ -1242,6 +1242,16 @@
     "    #show confusion matrix\n",
     "    print(confusion_matrix(y_test , y_pred))\n",
     "    print()\n",
+    "\n",
+    "    #confusion Matrix:\n",
+    "    #[[TN, FP],\n",
+    "    # [FN, TP]]\n",
+    "\n",
+    "    #TN : normal predicted as normal\n",
+    "    #FP : normal predicted as fraud\n",
+    "    #FN : fraud missed (worst case)\n",
+    "    #TP : fraud correctly detected\n",
+    "\n",
     "    \n",
     "    #show precision, recall, and f1-score\n",
     "    print(classification_report(y_test , y_pred))\n"
@@ -1249,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "309942dd",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "50a9bce8",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1331,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
